# mapping-private

cloud_algos/: CMakeLists.txt  cloud_line.pcd  launch_file_from_pipeline.py  manifest.xml  pipeline.yaml  plugins.xml  reconstruction_pipeline.yaml  sample_pipeline.yaml  test_pipeline.launch  test_pipeline_nodes.launch
cloud_algos/data/: cylinder_small.pcd
cloud_algos/deprecated/: decision_manager.cpp  planar_estimation.cpp
cloud_algos/launch/: box_estimation.launch  box_fit.launch  box_fit2.launch  cylinder_estimation.launch  cylinder_fit.launch  pcd_to_gfpfh.launch  pipeline_tmp.launch  radius_estimation.launch  rot_est.vcg  rotational_estimation.launch  rotational_estimation_pr2.launch  rotational_estimation_triangulation.launch  rotational_estimation_triangulation_pr2.launch  statistical_noise_removal.launch  tmp.launch  triangulation.launch
cloud_algos/src/: StringTokenizer.cpp  box_fit.cpp  box_fit2_algo.cpp  box_fit_algo.cpp  cloud_algos_test.cpp  cylinder_fit.cpp  cylinder_fit_algo.cpp  decision_manager.cpp  depth_image_triangulation.cpp  gfpfh.cpp  global_rsd.cpp  layered-3d-reconstruction.cpp  misc.cpp  mls_fit.cpp  noise_removal.cpp  normal_estimation.cpp  pfh.cpp  planar_estimation.cpp  plugin_loader.cpp  radius_estimation.cpp  region_growing.cpp  register_plugins.cpp  registration.cpp  rotational_estimation.cpp  svm_classification.cpp
cloud_algos/svm/: dfpfh.model  dfpfh.scp  fpfh.model  fpfh.scp  grsd.model  grsd.scp  grsd_fix.model  grsd_fix.scp  grsd_full.model  grsd_ijrr.model  grsd_ijrr.scp  grsd_merged.model  grsd_merged.scp  grsd_merged_chips.model  grsd_merged_chips.scp  teapot_smooth_fpfh.scp
color_chlac/: CMakeLists.txt  manifest.xml  tmp.sh
color_chlac/demos/: view_histograms.sh
color_chlac/launch/: view_hist_cone_1.launch  view_hist_cone_1.launch~  view_hist_purple_1.launch  view_hist_purple_2.launch  view_hist_torus_1.launch  view_hist_torus_2.launch  view_hist_torus_2.launch~
color_chlac/src/: ColorCHLAC.cpp  ColorCHLAC.hpp  ColorVoxel.cpp
color_chlac/test/: convertOld2NewPCD.cpp  exampleGRSD.cpp  exampleRSD.cpp  exampleVOSCH.cpp  example_GRSD_CCHLAC.cpp  example_GRSD_CCHLAC_rand.cpp  example_colorCHLAC.cpp  example_colorCHLAC_grid.cpp  example_colorCHLAC_rand.cpp
color_feature_classification/: ,  CMakeLists.txt  README  calcRate.sh  mainpage.dox  manifest.xml  memo_param.txt  rein.patch  tmp.sh  vfh_nearest_neighbors.patch
color_feature_classification/demos/: 0.calc_autoThreshold.sh  0.computeFeature.sh  0.compute_compress_axis.sh  1.build_tree.sh  1.compute_subspace.sh  2.computeFeature.sh  2.leave_one_out.sh  2.test_classify.sh  3.view_histograms.sh  4.view_histograms_pcds.sh  4.view_multi_pcds.sh  color_threshold.txt  data  pca_parameters.txt  result.txt  result2.txt
color_feature_classification/demos_artificial/: 0.calc_autoThreshold.sh  0.computeFeature.sh  0.compute_compress_axis.sh  1.compute_subspace.sh  1.compute_subspace.sh~  2.computeFeature.sh  2.test_classify.sh  2.test_classify.sh~  color_threshold.txt  data  result.txt  result2.txt  result3.txt
color_feature_classification/patches/: pcd_viewer_fpc.patch
color_feature_classification/scripts/: convertOld2NewPCD.sh  do_svm.sh  estimateGRSD.sh  get_names.sh  mkHistForSVM.sh  mkHistForSVM_test.sh  mkHistForSVM_train.sh
color_feature_classification/src/: libPCA.cpp
color_feature_classification/test/: FILE_MODE  build_tree.cpp  calcNormalization.cpp  calc_autoThreshold.cpp  cluster2global.cpp  computeFeature.cpp  computeFeature.cpp.backup0107  computeFeatureForSVM.cpp  computeFeature_tmp.cpp  computeGRSD.cpp  computeSubspace.cpp  computeSubspace_from_file.cpp  computeSubspace_with_rotate.cpp  computeSubspace_with_rotate.cpp.backup0107  normalizeHist.cpp  projectFeatures.cpp  show_variance.cpp  test_classify.cpp  test_classify_from_file.cpp  test_classify_from_file_GRSD.cpp
color_voxel_recognition/: CMakeLists.txt  README  manifest.xml  rosdep.yaml
color_voxel_recognition/demos/: color_threshold.txt  models
color_voxel_recognition/launch/: detect.launch  saveData_and_view.launch
color_voxel_recognition/param/: FILE_MODE
color_voxel_recognition/scripts/: copy_param_and_model.sh  detect_test.sh
color_voxel_recognition/src/: CCHLAC.cpp  Param.cpp  Search.cpp  Search_VOSCH.cpp  Voxel.cpp  glView.cpp  libPCA.cpp  libPCA_eigen.cpp  objFile.cpp  param.cpp  pca.cpp  ppmFile.cpp  search.cpp
color_voxel_recognition/test/: CAM_SIZE  FILE_MODE  calc_scene_CCHLAC.cpp  calc_scene_CCHLAC_withPCAsolve.cpp  calc_scene_autoThreshold.cpp  calc_scene_auto_threshold.cpp  detectObj.cpp  detectObj_GRSD.cpp  detectObj_VOSCH.cpp  detectObj_VOSCH_multi.cpp  detectObj_multi.cpp  detect_object.cpp  extractC3HLAC_models.cpp  extractC3HLAC_scene.cpp  extract_c3_hlac_models.cpp  extract_c3_hlac_scene.cpp  getColorPoint_model.cpp  getColorPoint_scene.cpp  getMesh_model.cpp  getMesh_scene.cpp  getVoxel_model.cpp  getVoxel_scene.cpp  getVoxel_scene_each.cpp  get_voxel_model.cpp  get_voxel_scene.cpp  mkMask.cpp  pca_models.cpp  pca_scene.cpp  pca_scene_from_each_file.cpp  saveData.cpp  save_data.cpp  search.cpp  show_result.cpp  variance_show.cpp  view_mesh.cpp  view_result.cpp  view_voxel.cpp
hough_segmentation/: CMakeLists.txt  README  hough_vosch  mainpage.dox  manifest.xml
hough_segmentation/include/: fetch_cuboid.hpp
hough_segmentation/launch/: hough_segmentation.launch
hough_segmentation/readme/: README  TODO  hough_sequences  hough_vosch  sequential_hough
hough_segmentation/src/: analyze_hough_classification.cpp  analyze_sequential_hough.cpp  assemble_statistics_file.cpp  cloud_operations.cpp  cloud_segmentation_by_voting.cpp  hough_classification.cpp  process_clouds.cpp  rot_trans_scale.cpp  rsd.cpp  segmentation_by_voting.cpp  sequential_hough.cpp  using_circles_for_segmentation_by_voting.cpp  using_lines_for_segmentation_by_voting.cpp
plane_clusters/: CMakeLists.txt  detect_boxes.launch  detect_planes.launch  manifest.xml  plane_clusters.launch
plane_clusters/src/: detect_boxes.cpp  detect_planes.cpp  plane_clusters.cpp  query_service.cpp  query_service_prolog.cpp  (+1 more)
(+3223 files in other folders)
